--- a/sass/partials/_checkout-content-area.scss
+++ b/sass/partials/_checkout-content-area.scss
@@ -55,6 +55,7 @@ body.woocommerce-checkout .fc-content {
 	padding-bottom: $global-spacing-medium;
 	width: 100%;
 	border: 0;
+	text-align: left;
 }
 body.woocommerce-checkout .fc-content.fc-container {
 	// max-width
